--- a/src/app/core/features/Faculty-of-Medicine/Pages/Home/departments/departments.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/Home/departments/departments.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="card-content">
         <h4 class="card-title">{{ department.name }}</h4>
-        <p class="card-description">{{ department.about }}</p>
+        <!-- <p class="card-description">{{ department.about }}</p> -->
       </div>
     </div>
   </div>
