--- a/src/app/core/features/Faculty-of-Medicine/Pages/Home/services/services.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/Home/services/services.component.html
@@ -20,7 +20,7 @@
       <!-- Card Content -->
       <div class="card-content">
         <h3 class="service-title">{{ service.title }}</h3>
-        <p class="card-description">{{ service.description }}</p>
+        <!-- <p class="card-description">{{ service.description }}</p> -->
       </div>
     </div>
   </div>
