--- a/src/app/core/features/Faculty-of-Medicine/Pages/shared/header/medicine-menu-bar/medicine-menu-bar.component.css
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/shared/header/medicine-menu-bar/medicine-menu-bar.component.css
@@ -163,7 +163,7 @@
   color: #fff;
 }
 .menu-link.active {
-  background: var(--medicine-primary-red-light);
+  /* background: var(--medicine-primary-red-light); */
   color: #fff;
   box-shadow: var(--medicine-menu-active-shadow);
 }
