--- a/src/app/core/features/Faculty-of-Medicine/Pages/Home/conferences/conferences.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/Home/conferences/conferences.component.html
@@ -15,7 +15,7 @@
           <span>{{ conference.createdDate | date: 'yyyy/MM/dd' }}</span>
         </div>
       </div>
-      <a [routerLink]="['/news', conference.id]" class="card-link">
+      <a (click)="goToConferenceDetails(conference)" class="card-link">
         Conference Details
         <i class="fas fa-arrow-right"></i>
       </a>
