--- a/src/app/core/features/Faculty-of-Medicine/Pages/centers/centers.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/centers/centers.component.html
@@ -73,7 +73,8 @@
             <div class="card-body">
               <div *ngIf="activeAboutSection === 'overview'">
                 <h3 class="text-brown mb-3">Overview</h3>
-                <p>{{ center?.about }}</p>
+                <p *ngIf="center?.about">{{ center?.about }}</p>
+                <p *ngIf="!center?.about">No information available about the center.</p>
               </div>
 
               <div *ngIf="activeAboutSection === 'vision'">
@@ -98,15 +99,16 @@
       </div>
     </div>
 
-    <!-- Services Tab Content -->
+    <!-- Details Tab Content -->
     <div *ngIf="activeTab === 'services'" class="col-12">
-      <div class="card">
+      <div class="card" *ngIf="centerDetail?.title || centerDetail?.description || centerDetail?.content">
         <div class="card-body">
           <h3 class="text-brown mb-3">{{ centerDetail?.title }}</h3>
           <p class="mb-3">{{ centerDetail?.description }}</p>
           <p>{{ centerDetail?.content }}</p>
         </div>
       </div>
+      <p *ngIf="!centerDetail?.title && !centerDetail?.description && !centerDetail?.content">No information available.</p>
     </div>
 
     <!-- Members Tab Content -->
@@ -121,7 +123,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h6 class="card-title">{{ member.memberName }}</h6>
-                    <p><span *ngIf="member.isLeader">(Head of Center)</span></p>
+                    <p><span *ngIf="member.isLeader">(Center Head)</span></p>
                   </div>
                 </div>
               </div>
