--- a/src/app/core/features/Faculty-of-Medicine/Pages/departments/departments.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/departments/departments.component.html
@@ -7,7 +7,7 @@
   <!-- Horizontal Tabs -->
   <div class="medicine-tabs">
     <ul class="nav nav-tabs">
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <button class="nav-link" [class.active]="activeTab === 'about'" (click)="switchTab('about')" type="button">
           About the Department
         </button>
@@ -16,12 +16,12 @@
         <button class="nav-link" [class.active]="activeTab === 'details'" (click)="switchTab('details')" type="button">
           Department Details
         </button>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <button class="nav-link" [class.active]="activeTab === 'programs'" (click)="switchTab('programs')" type="button">
           Department Programs
         </button>
-      </li>
+      </li> -->
       <li class="nav-item">
         <button class="nav-link" [class.active]="activeTab === 'services'" (click)="switchTab('services')" type="button">
           Department Services
@@ -37,101 +37,6 @@
 
   <!-- Content Area -->
   <div class="row">
-    <!-- About Tab Content -->
-    <div *ngIf="activeTab === 'about'" class="col-12">
-      <div class="row">
-        <!-- Sidebar -->
-        <div class="col-md-3 mb-4">
-          <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action"
-              [class.active]="activeAboutSection === 'overview'" (click)="switchAboutSection('overview')">
-              Overview
-            </button>
-            <button type="button" class="list-group-item list-group-item-action"
-              [class.active]="activeAboutSection === 'vision'" (click)="switchAboutSection('vision')">
-              Vision
-            </button>
-            <button type="button" class="list-group-item list-group-item-action"
-              [class.active]="activeAboutSection === 'mission'" (click)="switchAboutSection('mission')">
-              Mission
-            </button>
-            <button type="button" class="list-group-item list-group-item-action"
-              [class.active]="activeAboutSection === 'objectives'" (click)="switchAboutSection('objectives')">
-              Objectives
-            </button>
-          </div>
-        </div>
-
-        <!-- Content -->
-        <div class="col-md-9">
-          <div class="card">
-            <div class="card-body">
-              <div *ngIf="activeAboutSection === 'overview'">
-                <h3 class="text-brown mb-3">Overview</h3>
-                <p>{{ department?.about }}</p>
-              </div>
-
-              <div *ngIf="activeAboutSection === 'vision'">
-                <h3 class="text-brown mb-3">Vision</h3>
-                <p>{{ department?.vision }}</p>
-              </div>
-
-              <div *ngIf="activeAboutSection === 'mission'">
-                <h3 class="text-brown mb-3">Mission</h3>
-                <p>{{ department?.mission }}</p>
-              </div>
-
-              <div *ngIf="activeAboutSection === 'objectives'">
-                <h3 class="text-brown mb-3">Objectives</h3>
-                <ul>
-                  <li *ngFor="let goal of department?.goals">{{ goal.goalName }}</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Details Tab Content -->
-    <div *ngIf="activeTab === 'details'" class="col-12">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="text-brown mb-3">{{ departmentDetail?.title }}</h3>
-          <p class="mb-3">{{ departmentDetail?.content }}</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Programs Tab Content -->
-    <div *ngIf="activeTab === 'programs'" class="col-12">
-      <div class="row">
-        <!-- Sidebar -->
-        <div class="col-md-3 mb-4">
-          <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action"
-              *ngFor="let program of departmentPrograms"
-              [class.active]="selectedProgram?.id === program.id"
-              (click)="selectProgram(program)">
-              {{ program.name }}
-            </button>
-          </div>
-        </div>
-
-        <!-- Content -->
-        <div class="col-md-9">
-          <div class="card" *ngIf="selectedProgram">
-            <div class="card-body">
-              <h3 class="text-brown mb-3">{{ selectedProgram.name }}</h3>
-              <p><strong>Program Name:</strong> {{ selectedProgram.programName }}</p>
-              <p><strong>Department:</strong> {{ selectedProgram.departmentName }}</p>
-              <a [routerLink]="['/programs', selectedProgram.programId]" class="btn btn-medicine">View Program</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!-- Services Tab Content -->
     <div *ngIf="activeTab === 'services'" class="col-12">
       <div class="row">
@@ -163,6 +68,9 @@
             </div>
           </div>
         </div>
+        <div *ngIf="!selectedService">
+          <p>No information available about department services.</p>
+        </div>
       </div>
     </div>
 
@@ -178,7 +86,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h6 class="card-title">{{ member.memberName }}</h6>
-                    <p><span *ngIf="member.isLeader">(Head of Department)</span></p>
+                    <p><span *ngIf="member.isLeader">(Department Head)</span></p>
                   </div>
                 </div>
               </div>
