--- a/src/app/core/features/Faculty-of-Medicine/Pages/services/services.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/services/services.component.html
@@ -1,12 +1,13 @@
 <div class="container section">
   <!-- Service Title Section -->
-  <div class="sector-header p-4 mb-4 rounded">
+  <div class="sector-header  p-4 mb-4 rounded">
     <h1 class="text-brown">{{ service?.title || 'Loading data...' }}</h1>
   </div>
 
   <!-- Horizontal Tabs -->
   <div class="medicine-tabs">
     <ul class="nav nav-tabs">
+     
       <li class="nav-item">
         <button 
           class="nav-link" 
@@ -17,6 +18,7 @@
           Service Details
         </button>
       </li>
+  
     </ul>
   </div>
 
@@ -24,20 +26,13 @@
   <div class="row">
     <!-- Service Details Tab Content -->
     <div *ngIf="activeTab === 'departments'" class="col-12">
-      <div class="card">
+      <div class="card" *ngIf="service?.title || service?.description">
         <div class="card-body">
-          <h3 class="text-brown mb-3">{{ service?.title }}</h3>
-          <p class="mb-3">{{ service?.description }}</p>
-
-          <!-- <div *ngIf="service && service.steps && service.steps.length > 0" class="mb-4">
-            <h5 class="text-primary">Steps to Obtain the Service</h5>
-            <ol>
-              <li *ngFor="let step of service.steps">{{ step }}</li>
-            </ol>
-          </div> -->
-
+          <h3 class="text-brown mb-3"> {{service?.title }}</h3>
+          <p class="mb-3" [innerHTML]="formatDescription(service?.description || '')"></p>
         </div>
       </div>
+      <p *ngIf="!service?.title && !service?.description">No information available.</p>
     </div>
   </div>
 </div>
