change lang url

--- a/src/app/core/features/Faculty-of-Medicine/Pages/shared/header/medicine-logo/medicine-logo.component.html
+++ b/src/app/core/features/Faculty-of-Medicine/Pages/shared/header/medicine-logo/medicine-logo.component.html
@@ -34,6 +34,10 @@
             <i class="fas fa-envelope"></i>
             <span>{{ contact?.email }}</span>
           </a>
+          <a class="contact-item" href="{{ contact?.webSite }}" target="_blank" rel="noopener noreferrer">
+            <i class="fas fa-language"></i>
+            <span>EN</span>
+          </a>
         </div>
       </div>
     </div>
